# promptwars

./: .gitignore  Dockerfile  LINKEDIN_POST.md  README.md  cloudbuild.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  concierge.py  tools.py
backend/app/api/: __init__.py  websocket.py
backend/app/api/routes/: admin.py  agent.py  analytics.py  crowd.py  notifications.py
backend/app/crowd/: __init__.py  game_clock.py  models.py  predictor.py  simulator.py  venue.py
backend/app/gamification/: __init__.py  rewards.py
backend/app/middleware/: __init__.py  rate_limiter.py  security.py
backend/app/notifications/: __init__.py  fcm.py
backend/app/services/: __init__.py  google_cloud.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_concierge.py  test_config.py  test_fcm.py  test_game_clock.py  test_google_cloud.py  test_models.py  test_predictor.py  test_rate_limiter.py  test_rewards.py  test_simulator.py  test_tools.py  test_venue.py  test_websocket.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/hooks/: demoData.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminPage.tsx  AnalyticsPage.tsx  AttendeePage.tsx  NotFoundPage.tsx  WristbandPage.tsx
frontend/src/tests/: utils.test.ts
frontend/src/types/: index.ts
tasks/: lessons.md  todo.md
(+18 files in other folders)
